--- a/css/main.css
+++ b/css/main.css
@@ -87,3 +87,16 @@ body {
 .text-block__p {
 	line-height: 1.75;
 }
+/*footer*/
+.footer{
+	background-color: #1C1C1C;
+	padding: 60px 0 48px 0;
+}
+
+.footer-flex{
+	display: flex;
+	justify-content: space-between;
+}
+
+
+
