--- a/css/main.css
+++ b/css/main.css
@@ -103,10 +103,80 @@ body {
 .footer-flex{
 	display: flex;
 	justify-content: space-between;
+	padding-top: 30px;
+	align-items: center;
+}
+
+.first-footer-flex{
+	padding-bottom: 30px;
+	border-bottom: 1px solid rgba(255,255,255,.2);
+}
+.first-footer-flex .logo{
+	width: 120px;
+	height: 50px;
+	background-color: #fff;
+	color:#1C1C1C;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 5px;
+}
+
+.footer-social-link ul{
+	display: flex;
+	justify-content: flex-end;
+	column-gap: 20px;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+.footer-social-link ul li a{
+	display: flex;
+	align-items: center;
+	transition: .3s;
+	position: relative;
+}
+.footer-social-link ul li a:hover svg{
+	transition: .3s;
+	fill: #fc7100;
+}
+.footer-social-link ul:last-child li a::before{
+	content: "";
+	position: absolute;
+	bottom: -4px;
+	height: 2px;
+	border-radius: 4px;
+	background-color: #fafafa;
+	transition: .3s;
+	width: 0%;
+}
+.footer-social-link ul:last-child li a:hover svg{
+	fill: #fafafa;
+}
+.footer-social-link ul:last-child li a:hover::before{
+	transition: .3s;
+	width: 100%;
+}
+.footer-social-link ul li a svg{
+	fill: #fafafa;
+}
+li{
+	list-style-type: none;
+}
+a{
+	text-decoration:none;
+	color: #fafafa;
 }
 
 
-
+.footer-bottom-link{
+	display: flex;
+	flex-direction: row;
+}
+.footer-bottom-link li:last-child{
+	margin-left: 100px;
+}
 
 
 /* media styles adaptive */
@@ -145,8 +215,26 @@ body {
 	}
 	
 }
+/* 500px */
+@media(max-width:500px){
+	.footer-social-link ul:last-child{
+		flex-direction: column;
+		align-items: flex-end;
+		row-gap: 15px;
+		margin-top: 20px;
+	}
+	/* .footer-bottom-link{
+		justify-content: space-between !important;
+	}
+	.footer-bottom-link li:last-child{
+		margin-left: auto;
+	} */
+}
 /* 400px */
 @media(max-width:400px){
+	.footer-flex .logo{
+		width: 100px;
+	}
 	.main-header{
 		height: 70vh;
 	} 
@@ -158,4 +246,7 @@ body {
 		text-align: center;
 		font-size: calc(var(--index) * 5);
 	}
+	.footer-bottom-link li:last-child{
+		margin-left: 50px !important;
+	} 
 }
